--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,10 @@ body {
   box-sizing: border-box;
 }
 
+input:focus {
+  outline: none;
+}
+
 :root {
   --violet: #5964e0;
   --light-violet: #939bf4;
