--- a/component/molecules/Modal/ModalFilterOptions/ModalFilterOptions.module.css
+++ b/component/molecules/Modal/ModalFilterOptions/ModalFilterOptions.module.css
@@ -12,7 +12,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
   z-index: 10;
   width: 80vw;
   padding: 30px 0 40px 0;
@@ -35,4 +34,10 @@
   text-align: right;
   margin-top: -20px;
   margin-right: 20px;
+}
+
+.childrenContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
